--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 
 <body>
     <script src="script.js"></script>
+
+
+    <header>
+
+        <nav>
+
+            <a href="index.html">Forside</a>
+            <a href="sider/piercinger.html">Piercinger</a>
+            <a href="sider/praktiskinfo.html">Praktisk info</a>
+            <a href="sider/omos.html">Om os</a>
+            <a href="sider/priser.html">Priser</a>
+            <a href="sider/kontaktbooking.html">Kontakt/booking</a>
+
+
+
+
+        </nav>
+
+    </header>
+
+
 </body>
 
 </html>
