mappe fjernet ups

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <nav>
 
             <a href="index.html">Forside</a>
-            <a href="sider/piercinger.html">Piercinger</a>
-            <a href="sider/praktiskinfo.html">Praktisk info</a>
-            <a href="sider/omos.html">Om os</a>
-            <a href="sider/priser.html">Priser</a>
-            <a href="sider/kontaktbooking.html">Kontakt/booking</a>
+            <a href="piercinger.html">Piercinger</a>
+            <a href="praktiskinfo.html">Praktisk info</a>
+            <a href="omos.html">Om os</a>
+            <a href="priser.html">Priser</a>
+            <a href="kontaktbooking.html">Kontakt/booking</a>
 
 
 
