css generelle indstillinger og piercingside begyndt

--- a/piercinger.html
+++ b/piercinger.html
@@ -9,6 +9,91 @@
 </head>
 
 <body>
+
+    <header>
+
+        <nav>
+            <a href="index.html">Forside</a>
+            <a href="piercinger.html">Piercinger</a>
+            <a href="praktiskinfo.html">Praktisk info</a>
+            <a href="omos.html">Om os</a>
+            <a href="priser.html">Priser</a>
+            <a href="kontaktbooking.html">Kontakt/booking</a>
+        </nav>
+
+    </header>
+
+    <div class="piercinger"> Piercinger</div>
+
+
+    <section id="piercinger">
+        <div class="wrap">
+            <h2>Indsæt video her</h2>
+        </div>
+
+
+        <div class="wrap">
+
+            <div class="col">
+                <div class="img">
+                    <figure>
+                        <img src="billeder/fissetest.png" alt="fissetest">
+                        <figcaption> Fissetest </figcaption>
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="img">
+                    <figure>
+                        <img src="billeder/piktest.png" alt="piktest">
+                        <figcaption> Piktest </figcaption>
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="img">
+                    <figure>
+                        <img src="billeder/mundtest.png" alt="mundtest">
+                        <figcaption> Mundtest </figcaption>
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="img">
+                    <figure>
+                        <img src="billeder/%C3%B8retest.png" alt="øretest">
+                        <figcaption> Øretest </figcaption>
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                </div>
+            </div>
+
+
+
+
+        </div>
+
+
+
+
+
+    </section>
+
+
     <script src="script.js"></script>
 </body>
 
