piercinger så langt så godt

--- a/piercinger.html
+++ b/piercinger.html
@@ -27,10 +27,21 @@
 
 
     <section id="piercinger">
+
+        <!--        *******Video start*******-->
+
         <div class="wrap">
             <h2>Indsæt video her</h2>
+            <video controls>
+                <source src="videoer/testvideo.MOV" type="video/mp4">
+            </video>
         </div>
 
+        <!--        *******Video slut*******-->
+
+
+
+        <!--        *******Billeder af piercinger start*******-->
 
         <div class="wrap">
 
@@ -70,11 +81,15 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="wrap">
+
             <div class="col">
                 <div class="img">
                     <figure>
-                        <img src="billeder/%C3%B8retest.png" alt="øretest">
-                        <figcaption> Øretest </figcaption>
+                        <img src="billeder/fissetest.png" alt="fissetest">
+                        <figcaption> Fissetest </figcaption>
                     </figure>
                 </div>
                 <div class="txt">
@@ -82,12 +97,73 @@
                 </div>
             </div>
 
+            <div class="col">
+                <div class="img">
+                    <figure>
+                        <img src="billeder/piktest.png" alt="piktest">
+                        <figcaption> Piktest </figcaption>
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                </div>
+            </div>
 
-
+            <div class="col">
+                <div class="img">
+                    <figure>
+                        <img src="billeder/mundtest.png" alt="mundtest">
+                        <figcaption> Mundtest </figcaption>
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                </div>
+            </div>
 
         </div>
 
+        <div class="wrap">
 
+            <div class="col">
+                <div class="img">
+                    <figure>
+                        <img src="billeder/fissetest.png" alt="fissetest">
+                        <figcaption> Fissetest </figcaption>
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="img">
+                    <figure>
+                        <img src="billeder/piktest.png" alt="piktest">
+                        <figcaption> Piktest </figcaption>
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="img">
+                    <figure>
+                        <img src="billeder/mundtest.png" alt="mundtest">
+                        <figcaption> Mundtest </figcaption>
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                </div>
+            </div>
+
+        </div>
+
+        <!--        *******Billeder af piercinger slut*******-->
 
 
 
