--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -19,69 +19,75 @@
             <a href="kontaktbooking.html">Kontakt/booking</a>
         </nav>
     </header>
+    <section id="praktiskinfo">
+        <div id="soeg"></div>
+        <div class="txt">
+            <h1>Praktisk Info</h1>
+            <h2>Materialer</h2>
+            <p>Det er ikke alle materialer, der egner sig til Piercing-smykker.
+                I den første tid, efter du har fået din nye piercing, er piercingen et sår. Derfor er det meget vigtigt, at du ikke udsætter piercingen for smykker, der kan afgive stoffer, som kan forsinke sårhelingen, og eventuelt fremkalde allergiske reaktioner.</p>
+            <p>Hos Gorlubb bruger vi implantat-stål ( også kaldet kirurgisk stål ), til nye piercinger.
+                Det er også muligt at bruge titanium eller niobium smykker, direkte til den nye piercing. Du bør under ingen omstændigheder bruge guld, under 18 karat nikkelfrit, sølv -uanset renhed, eller billige nikkelsmykker i din nye piercing. De billige smykker kan forårsage nikkelallergi, som du aldrig slipper af med igen, og med sølv og guld-smykker, er dét metal, man tilsætter til legeringen, ikke altid helt godt nok.</p>
+            <p>Når din piercing, er helet helt igennem, har du en større frihed til, at bruge smykker af en mindre lødighed, for eksempel som vedhæng, men vores anbefaling er, at du holder dig til kvalitets-smykker, som er lavet til at blive brugt i piercing-sammenhæng.</p>
 
-    <div id="soeg"></div>
-    <div class="txt">
-        <h1>Praktisk Info</h1>
-        <h2>Materialer</h2>
-        <p>Det er ikke alle materialer, der egner sig til Piercing-smykker.
-            I den første tid, efter du har fået din nye piercing, er piercingen et sår. Derfor er det meget vigtigt, at du ikke udsætter piercingen for smykker, der kan afgive stoffer, som kan forsinke sårhelingen, og eventuelt fremkalde allergiske reaktioner.</p>
-        <p>Hos Gorlubb bruger vi implantat-stål ( også kaldet kirurgisk stål ), til nye piercinger.
-            Det er også muligt at bruge titanium eller niobium smykker, direkte til den nye piercing. Du bør under ingen omstændigheder bruge guld, under 18 karat nikkelfrit, sølv -uanset renhed, eller billige nikkelsmykker i din nye piercing. De billige smykker kan forårsage nikkelallergi, som du aldrig slipper af med igen, og med sølv og guld-smykker, er dét metal, man tilsætter til legeringen, ikke altid helt godt nok.</p>
-        <p>Når din piercing, er helet helt igennem, har du en større frihed til, at bruge smykker af en mindre lødighed, for eksempel som vedhæng, men vores anbefaling er, at du holder dig til kvalitets-smykker, som er lavet til at blive brugt i piercing-sammenhæng.</p>
+            <ul>Vi har et meget bredt udvalg af smykker, som vi står inde for ikke giver unødige problemer, både til daglig brug, og til fest & ballade.<br>Nogle af mulighederne er:
+                <li>Forskellige 'kugle-overtræk' i blød plast.</li>
+                <li>Forskellige 'kugler', både kugler af stål, titanium, niobium, hård plast, og mange andre materialer.</li>
+                <li>UV-reflekterende screw on's.</li>
+                <li>Spikes til at skrue på enden af for eksempel stave.</li>
+                <li>Vi har et bredt udvalg af retainers ('piercing-skjulere') i PTFE, og hård plast - hvis din arbejdsgiver ikke kan lide din piercing!</li>
+            </ul>
+            <p>Alle vore plast-materialer er naturligvis 100 % fri for thalater!</p>
 
-        <ul>Vi har et meget bredt udvalg af smykker, som vi står inde for ikke giver unødige problemer, både til daglig brug, og til fest & ballade.<br>Nogle af mulighederne er:
-            <li>Forskellige 'kugle-overtræk' i blød plast.</li>
-            <li>Forskellige 'kugler', både kugler af stål, titanium, niobium, hård plast, og mange andre materialer.</li>
-            <li>UV-reflekterende screw on's.</li>
-            <li>Spikes til at skrue på enden af for eksempel stave.</li>
-            <li>Vi har et bredt udvalg af retainers ('piercing-skjulere') i PTFE, og hård plast - hvis din arbejdsgiver ikke kan lide din piercing!</li>
-        </ul>
-        <p>Alle vore plast-materialer er naturligvis 100 % fri for thalater!</p>
+            <h2>Rettigheder</h2>
+            <p>Enhver person som ønsker en piercing har ret til;</p>
+            <p>At blive piercet i et hygiejnisk rum, af en ren og opmærksom piercer, som er iført rent tøj og et par engangs gummihandsker.</p>
+            <p>En ædru, venlig, rolig og kyndig piercer, som kan guide dig tillidsfuldt og sikkert gennem din piercing-oplevelse.</p>
+            <p>At kræve, at pierceren følger den højeste standard indenfor sterilisation og hygiejne.</p>
+            <p>At blive piercet med en helt ny, fuldstændig steril nål, som straks efter piercingen smides i en nålecontainer, specielt beregnet til hospitalsaffald.</p>
+            <p>At kræve at alle instrumenter, som berører kroppen, er nyligt steriliserede i en autoklave, og opbevares i lukkede autoklaveposer indtil brug.</p>
+            <p>At kræve at smykket, som sættes i, har den rigtige trådtykkelse og diameter, for at sikre den hurtigste heling af den pågældende piercing.</p>
+            <p>At vide at piercing-pistoler er upræcise, og kan være direkte farlige, når de bruges andre steder end i øreflippen.</p>
+            <p>At blive ordentligt informeret om helings processen, for den nye piercing.</p>
+            <p>Fortsat at have adgang til sin piercer, for konsultation og assistance med alle piercing-relaterede spørgsmål.</p>
 
-        <h2>Rettigheder</h2>
-        <p>Enhver person som ønsker en piercing har ret til;</p>
-        <p>At blive piercet i et hygiejnisk rum, af en ren og opmærksom piercer, som er iført rent tøj og et par engangs gummihandsker.</p>
-        <p>En ædru, venlig, rolig og kyndig piercer, som kan guide dig tillidsfuldt og sikkert gennem din piercing-oplevelse.</p>
-        <p>At kræve, at pierceren følger den højeste standard indenfor sterilisation og hygiejne.</p>
-        <p>At blive piercet med en helt ny, fuldstændig steril nål, som straks efter piercingen smides i en nålecontainer, specielt beregnet til hospitalsaffald.</p>
-        <p>At kræve at alle instrumenter, som berører kroppen, er nyligt steriliserede i en autoklave, og opbevares i lukkede autoklaveposer indtil brug.</p>
-        <p>At kræve at smykket, som sættes i, har den rigtige trådtykkelse og diameter, for at sikre den hurtigste heling af den pågældende piercing.</p>
-        <p>At vide at piercing-pistoler er upræcise, og kan være direkte farlige, når de bruges andre steder end i øreflippen.</p>
-        <p>At blive ordentligt informeret om helings processen, for den nye piercing.</p>
-        <p>Fortsat at have adgang til sin piercer, for konsultation og assistance med alle piercing-relaterede spørgsmål.</p>
+            <h2>Efterbehandling</h2>
+            <p>Det er vigtigt, at du følger efterbehandlingen nøje. Helingsprocessen er forskellig fra person til person. Vær derfor varsom med at følge eventuelle råd fra venner. Deres helingsforløb kan være helt forskelligt fra dit.<br>Er du i tvivl om det mindste, så vær ikke bange for at henvende dig.<br>Vi står altid parat til at give dig den bedst mulige vejledning.</p>
 
-        <h2>Efterbehandling</h2>
-        <p>Det er vigtigt, at du følger efterbehandlingen nøje. Helingsprocessen er forskellig fra person til person. Vær derfor varsom med at følge eventuelle råd fra venner. Deres helingsforløb kan være helt forskelligt fra dit.<br>Er du i tvivl om det mindste, så vær ikke bange for at henvende dig.<br>Vi står altid parat til at give dig den bedst mulige vejledning.</p>
+            <p>Afhængigt af hvilken piercing du har fået, er der forskellige hensyn du bør tage, og forskellige metoder du bør anvende, for at din piercing heler bedst muligt, og så hurtigt som muligt.</p>
 
-        <p>Afhængigt af hvilken piercing du har fået, er der forskellige hensyn du bør tage, og forskellige metoder du bør anvende, for at din piercing heler bedst muligt, og så hurtigt som muligt.</p>
+            <p>I de fleste piercinger sættes et smykke i, som tillader området at hæve.<br>Når hævelsen er faldet, skiftes til et mindre smykke.<br>Det er ikke nødvendigt at bestille tid til et smykkeskift, man kan bare komme forbi mellem 12:00 - 17:30</p>
 
-        <p>I de fleste piercinger sættes et smykke i, som tillader området at hæve.<br>Når hævelsen er faldet, skiftes til et mindre smykke.<br>Det er ikke nødvendigt at bestille tid til et smykkeskift, man kan bare komme forbi mellem 12:00 - 17:30</p>
+            <p>I alle tilfælde er det et godt råd, at hvis du bruger saltvand (som du bør) så bør du bruge salt uden tilsat jod, "Havsalt" .Jod kan udtørre området omkring piercingen på en uhensigtsmæssig måde.<br>Kan du ikke få fat i (hav)salt uden jod, er det dog bedre at bruge salt med jod, end ikke at bruge saltvand, da du får langt større problemer ved ikke at bruge saltvand, end ved at bruge salt(vand) med jod!</p>
 
-        <p>I alle tilfælde er det et godt råd, at hvis du bruger saltvand (som du bør) så bør du bruge salt uden tilsat jod, "Havsalt" .Jod kan udtørre området omkring piercingen på en uhensigtsmæssig måde.<br>Kan du ikke få fat i (hav)salt uden jod, er det dog bedre at bruge salt med jod, end ikke at bruge saltvand, da du får langt større problemer ved ikke at bruge saltvand, end ved at bruge salt(vand) med jod!</p>
+            <p>Klik på din piercing, for at få den præcise vejledning til din piercing.</p>
+            <div class="piercingknap"></div>
+            <div class="piercingknap"></div>
+            <div class="piercingknap"></div>
+            <div class="piercingknap"></div>
+            <div class="piercingknap"></div>
+            <div class="piercingknap"></div>
 
-        <p>Klik på din piercing, for at få den præcise vejledning til din piercing.</p>
+            <h2>Links</h2>
+            <p>Her er en række hyperlinks, til forskellige steder, der har noget at sige om piercing.</p>
+            <p>De informationer, du finder her, er vi ikke nødvendigvis altid enige i, men vi medner at det er vigtigt, at DU har mulighed for at søge information. Det er så op til dig at sortere informationerne.</p>
+            <p>Nogle af stederne vil nok forekomme de fleste temmelig 'tørre', fx. de steder, der handler om Lov-stof og EU-direktiver; men vi mener at der er omhuen værd, hvis du står lige foran at skulle have din første piercing!</p>
+            <p>(TIP: Når du kommer ind på en hjemmeside med meget tekst, kan du bruge [Ctrl] + [B] til at åbne et 'søge-vindue'. Her skriver du så fx. [piercing] -og så får du vist det første sted i teksten, hvor ordet piercing forekommer. Jeg ved at det virker i MS Internet Explorer, i andre browsere må du selv forsøge dig frem).</p>
 
+            <ul>
+                <li> <a href="http://www.safepiercing.dk/">OAPP</a> Organisationen af professionelle Piercere i Danmark.</li>
+                <li> <a href="http://www.safepiercing.org/index.html">APP</a> amerikansk/international sammenslutning af professionelle piercere</li>
+                <li> <a href="http://www.mst.dk/default.asp?Sub=http://www.mst.dk/udgiv/publikationer/2001/87-7944-570-5/html/helepubl.htm">MTS</a> om nye EU-regler ( år 2000 ) vedrørende nikkel-indhold i piercingsmykker</li>
+                <li> <a href="http://www.netdoktor.dk/sunderaad/fakta/piercingoghygiejne.htm">Netdoktor</a> kort omkring rensning og pleje af en ny piercing.</li>
+                <li> <a href="http://www.piercing-info.dk/">Piercing-info</a> informationer omkring piercere, piercing-brancheorganisationer og meget mere.</li>
+                <li> <a href="http://www.serum.dk/sw3726.asp">Serum</a> informationsmateriale til såvel piercere, som de der vil pierces.</li>
+                <li> <a href="https://www.sundhed.dk/servlet/generalarticle?cx=56&id=3624&main_id=sundhed">Sundhed</a> sundhedsportal, drevet af en lang række organisationer o.a.</li>
+                <li> <a href="http://sst.dk/sitecore/service/notfound.aspx?item=%2ftabsearch&user=extranet%5cAnonymous&site=website">SST</a> henvisning til informationsfolder i *.pdf format</li>
+                <li> <a href="http://www.ung-bladet.dk/">Ung-bladet</a> debat/informationssider omkring bl.a. piercing og alt muligt andet.</li>
+            </ul>
 
-        <h2>Links</h2>
-        <p>Her er en række hyperlinks, til forskellige steder, der har noget at sige om piercing.</p>
-        <p>De informationer, du finder her, er vi ikke nødvendigvis altid enige i, men vi medner at det er vigtigt, at DU har mulighed for at søge information. Det er så op til dig at sortere informationerne.</p>
-        <p>Nogle af stederne vil nok forekomme de fleste temmelig 'tørre', fx. de steder, der handler om Lov-stof og EU-direktiver; men vi mener at der er omhuen værd, hvis du står lige foran at skulle have din første piercing!</p>
-        <p>(TIP: Når du kommer ind på en hjemmeside med meget tekst, kan du bruge [Ctrl] + [B] til at åbne et 'søge-vindue'. Her skriver du så fx. [piercing] -og så får du vist det første sted i teksten, hvor ordet piercing forekommer. Jeg ved at det virker i MS Internet Explorer, i andre browsere må du selv forsøge dig frem).</p>
-
-        <ul>
-            <li> <a href="http://www.safepiercing.dk/">OAPP</a> Organisationen af professionelle Piercere i Danmark.</li>
-            <li> <a href="http://www.safepiercing.org/index.html">APP</a> amerikansk/international sammenslutning af professionelle piercere</li>
-            <li> <a href="http://www.mst.dk/default.asp?Sub=http://www.mst.dk/udgiv/publikationer/2001/87-7944-570-5/html/helepubl.htm">MTS</a> om nye EU-regler ( år 2000 ) vedrørende nikkel-indhold i piercingsmykker</li>
-            <li> <a href="http://www.netdoktor.dk/sunderaad/fakta/piercingoghygiejne.htm">Netdoktor</a> kort omkring rensning og pleje af en ny piercing.</li>
-            <li> <a href="http://www.piercing-info.dk/">Piercing-info</a> informationer omkring piercere, piercing-brancheorganisationer og meget mere.</li>
-            <li> <a href="http://www.serum.dk/sw3726.asp">Serum</a> informationsmateriale til såvel piercere, som de der vil pierces.</li>
-            <li> <a href="https://www.sundhed.dk/servlet/generalarticle?cx=56&id=3624&main_id=sundhed">Sundhed</a> sundhedsportal, drevet af en lang række organisationer o.a.</li>
-            <li> <a href="http://sst.dk/sitecore/service/notfound.aspx?item=%2ftabsearch&user=extranet%5cAnonymous&site=website">SST</a> henvisning til informationsfolder i *.pdf format</li>
-            <li> <a href="http://www.ung-bladet.dk/">Ung-bladet</a> debat/informationssider omkring bl.a. piercing og alt muligt andet.</li>
-        </ul>
-
-    </div>
+        </div>
+    </section>
 
     <script src="script.js"></script>
 </body>
