piercing næsten done, mangler rigtige billeder og video og footer

--- a/piercinger.html
+++ b/piercinger.html
@@ -31,7 +31,7 @@
         <!--        *******Video start*******-->
 
         <div class="wrap">
-            <h2>Indsæt video her</h2>
+            <h1>Piercinger</h1>
             <video controls>
                 <source src="videoer/testvideo.MOV" type="video/mp4">
             </video>
@@ -46,38 +46,39 @@
         <div class="wrap">
 
             <div class="col">
+                <h2>bla bla piercing</h2>
                 <div class="img">
+
                     <figure>
                         <img src="billeder/fissetest.png" alt="fissetest">
-                        <figcaption> Fissetest </figcaption>
                     </figure>
                 </div>
                 <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
             <div class="col">
+                <h2>bla bla piercing</h2>
                 <div class="img">
                     <figure>
                         <img src="billeder/piktest.png" alt="piktest">
-                        <figcaption> Piktest </figcaption>
                     </figure>
                 </div>
                 <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
             <div class="col">
+                <h2>bla bla piercing</h2>
                 <div class="img">
                     <figure>
                         <img src="billeder/mundtest.png" alt="mundtest">
-                        <figcaption> Mundtest </figcaption>
                     </figure>
                 </div>
                 <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
@@ -86,38 +87,38 @@
         <div class="wrap">
 
             <div class="col">
+                <h2>bla bla piercing</h2>
                 <div class="img">
                     <figure>
                         <img src="billeder/fissetest.png" alt="fissetest">
-                        <figcaption> Fissetest </figcaption>
                     </figure>
                 </div>
                 <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
             <div class="col">
+                <h2>bla bla piercing</h2>
                 <div class="img">
                     <figure>
                         <img src="billeder/piktest.png" alt="piktest">
-                        <figcaption> Piktest </figcaption>
                     </figure>
                 </div>
                 <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
             <div class="col">
+                <h2>bla bla piercing</h2>
                 <div class="img">
                     <figure>
                         <img src="billeder/mundtest.png" alt="mundtest">
-                        <figcaption> Mundtest </figcaption>
                     </figure>
                 </div>
                 <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
@@ -125,39 +126,40 @@
 
         <div class="wrap">
 
+
             <div class="col">
+                <h2>bla bla piercing</h2>
                 <div class="img">
                     <figure>
                         <img src="billeder/fissetest.png" alt="fissetest">
-                        <figcaption> Fissetest </figcaption>
                     </figure>
                 </div>
                 <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
             <div class="col">
+                <h2>bla bla piercing</h2>
                 <div class="img">
                     <figure>
                         <img src="billeder/piktest.png" alt="piktest">
-                        <figcaption> Piktest </figcaption>
                     </figure>
                 </div>
                 <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
             <div class="col">
+                <h2>bla bla piercing</h2>
                 <div class="img">
                     <figure>
                         <img src="billeder/mundtest.png" alt="mundtest">
-                        <figcaption> Mundtest </figcaption>
                     </figure>
                 </div>
                 <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sint deserunt rem sed, consequatur</p>
+                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
