gjorde hudpiercing knap klikbar

--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -62,9 +62,11 @@
 
             <p>Klik på din piercing, for at få den præcise vejledning til din piercing.</p>
             <div id="knapper">
-                <div class="piercingknap">
-                    <p>HUDPIERCING</p>
-                </div>
+                <a href="hudpiercing.html">
+                    <div class="piercingknap">
+                        <p>HUDPIERCING</p>
+                    </div>
+                </a>
                 <div class="piercingknap">
                     <p>BRUSKPIERCING</p>
                 </div>
