tilføjet en searchbar men man kan ikke søge med den

--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -23,7 +23,10 @@
         </nav>
     </header>
     <section id="praktiskinfo">
-        <div id="soeg"></div>
+        <div id="soeg">
+            <input type="text" placeholder="Søg">
+            skal måske slettes?
+        </div>
         <h1>Praktisk Info</h1>
         <div class="txt">
             <h2>Materialer</h2>
@@ -73,7 +76,7 @@
                 <div class="piercingknap">
                     <p>BRUSKPIERCING</p>
                 </div>
-                <div class="piercingknap2">LÆBE- /KINDPIERCING</div>
+                <div class="piercingknap2">LÆBE- <br>/KINDPIERCING</div>
                 <div class="piercingknap">
                     <p>TUNGEPIERCING</p>
                 </div>
