--- a/kontaktbooking.html
+++ b/kontaktbooking.html
@@ -12,7 +12,24 @@
 </head>
 
 <body>
-    <script src="script.js"></script>
+
+
+
+    <header>
+
+        <nav>
+            <a href="index.html">Forside</a>
+            <a href="piercinger.html">Piercinger</a>
+            <a href="praktiskinfo.html">Praktisk info</a>
+            <a href="omos.html">Om os</a>
+            <a href="priser.html">Priser</a>
+            <a href="kontaktbooking.html">Kontakt/booking</a>
+        </nav>
+
+    </header>
+
+    <div class="kontaktbooking"> Kontakt/Booking</div>
+
 
     <section id="kontaktbooking">
 
@@ -57,6 +74,8 @@
         </div>
 
     </footer>
+
+    <script src="script.js"></script>
 
 </body>
 
