--- a/omos.html
+++ b/omos.html
@@ -13,9 +13,105 @@
 
 <body>
 
+    <header>
+
+        <nav>
+            <a href="index.html">Forside</a>
+            <a href="piercinger.html">Piercinger</a>
+            <a href="praktiskinfo.html">Praktisk info</a>
+            <a href="omos.html">Om os</a>
+            <a href="priser.html">Priser</a>
+            <a href="kontaktbooking.html">Kontakt/booking</a>
+        </nav>
+
+    </header>
+
+    <div class="omos"> Om os</div>
+
+
     <section id="omos">
 
+        <!--        *******Video start*******-->
 
+        <div class="wrap">
+            <h1>Om os</h1>
+            <video controls>
+                <source src="videoer/testvideo.MOV" type="video/mp4">
+            </video>
+        </div>
+
+        <!--        *******Video slut*******-->
+
+        <!--        *******Om os start*******-->
+
+        <div class="wrap">
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Person 1</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="billeder/jack.jpg" alt="Jack">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="billeder/jack.jpg" alt="Jack arbejder">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="txt">
+                    <h2>Person 2</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="billeder/kira.jpg" alt="Kira">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="billeder/kira.jpg" alt="Kira arbejder">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="txt">
+                    <h2>Person 3</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="billeder/mira.jpg" alt="Mira">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="billeder/mira.jpg" alt="Mira arbejder">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
+                </div>
+            </div>
+        </div>
+
+        <!--        *******Om os slut*******-->
 
     </section>
     <footer>
