--- a/priser.html
+++ b/priser.html
@@ -13,6 +13,26 @@
 
 <body>
 
+    <header>
+
+        <nav>
+            <a href="index.html">Forside</a>
+            <a href="piercinger.html">Piercinger</a>
+            <a href="praktiskinfo.html">Praktisk info</a>
+            <a href="omos.html">Om os</a>
+            <a href="priser.html">Priser</a>
+            <a href="kontaktbooking.html">Kontakt/booking</a>
+        </nav>
+
+    </header>
+
+    <div class="priser"> priser</div>
+
+
+
+
+
+
     <section id="priser">
 
 
