--- a/omos.html
+++ b/omos.html
@@ -34,7 +34,7 @@
         <!--        *******Video start*******-->
 
         <div class="wrap">
-            <h1>Om os</h1>
+            <h1>Om os - husk at rette margin om txt-boksene til efter de rigtige billeder er sat ind!</h1>
             <video controls>
                 <source src="videoer/testvideo.MOV" type="video/mp4">
             </video>
