--- a/kontaktbooking.html
+++ b/kontaktbooking.html
@@ -34,6 +34,59 @@
     <section id="kontaktbooking">
 
 
+        <div class="bestilling">
+            <div class="txt">
+                <h1>Book direkte</h1>
+            </div>
+            <iframe src="https://piercing.bestilling.nu" height="600" width="1000"></iframe>
+        </div>
+
+        <div class="kontakt">
+            <div class="txt">
+                <h1>Kontakt os direkte</h1>
+            </div>
+            <div class="txt">
+                <h2>Navn:</h2>
+            </div>
+            <div id="navn">
+                <input type="text" placeholder="NAVN">
+            </div>
+            <div class="txt">
+                <h2>Adresse:</h2>
+            </div>
+            <div id="adresse">
+                <input type="text" placeholder="ADRESSE">
+            </div>
+            <div class="txt">
+                <h2>Postnr. og by:</h2>
+            </div>
+            <div id="by">
+                <input type="text" placeholder="POSTNR. OG BY">
+            </div>
+            <div class="txt">
+                <h2>Telefonnummer:</h2>
+            </div>
+            <div id="tlf">
+                <input type="text" placeholder="TELEFONNUMMER">
+            </div>
+            <div class="txt">
+                <h2>Emailadresse:</h2>
+            </div>
+            <div id="email">
+                <input type="text" placeholder="EMAILADRESSE">
+            </div>
+            <div class="txt">
+                <h2>Besked:</h2>
+            </div>
+            <div id="besked">
+                <input type="text" placeholder="BESKED">
+            </div>
+        </div>
+
+        <div class="kort">
+            <h1>Her finder du os</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2250.0200148485114!2d12.554820315800667!3d55.671252105746326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46525374bbc4e677%3A0xf87c94b27ceaa2a!2sGorlubb%20Piercing!5e0!3m2!1sda!2sdk!4v1576485772953!5m2!1sda!2sdk" width="1000" height="450"></iframe>
+        </div>
 
 
 
