--- a/piercinger.html
+++ b/piercinger.html
@@ -33,7 +33,7 @@
         <!--        *******Video start*******-->
 
         <div class="wrap">
-            <h1>Piercinger</h1>
+            <h1>Piercinger - husk at rette margin om txt-boksene til efter de rigtige billeder er sat ind!</h1>
             <video controls>
                 <source src="videoer/testvideo.MOV" type="video/mp4">
             </video>
@@ -48,9 +48,10 @@
         <div class="wrap">
 
             <div class="col">
-                <h2>bla bla piercing</h2>
+                <div class="txt">
+                    <h2>bla bla piercing</h2>
+                </div>
                 <div class="img">
-
                     <figure>
                         <img src="billeder/fissetest.png" alt="fissetest">
                     </figure>
@@ -61,7 +62,9 @@
             </div>
 
             <div class="col">
-                <h2>bla bla piercing</h2>
+                <div class="txt">
+                    <h2>bla bla piercing</h2>
+                </div>
                 <div class="img">
                     <figure>
                         <img src="billeder/piktest.png" alt="piktest">
@@ -73,7 +76,9 @@
             </div>
 
             <div class="col">
-                <h2>bla bla piercing</h2>
+                <div class="txt">
+                    <h2>bla bla piercing</h2>
+                </div>
                 <div class="img">
                     <figure>
                         <img src="billeder/mundtest.png" alt="mundtest">
@@ -89,7 +94,9 @@
         <div class="wrap">
 
             <div class="col">
-                <h2>bla bla piercing</h2>
+                <div class="txt">
+                    <h2>bla bla piercing</h2>
+                </div>
                 <div class="img">
                     <figure>
                         <img src="billeder/fissetest.png" alt="fissetest">
@@ -101,7 +108,9 @@
             </div>
 
             <div class="col">
-                <h2>bla bla piercing</h2>
+                <div class="txt">
+                    <h2>bla bla piercing</h2>
+                </div>
                 <div class="img">
                     <figure>
                         <img src="billeder/piktest.png" alt="piktest">
@@ -113,7 +122,9 @@
             </div>
 
             <div class="col">
-                <h2>bla bla piercing</h2>
+                <div class="txt">
+                    <h2>bla bla piercing</h2>
+                </div>
                 <div class="img">
                     <figure>
                         <img src="billeder/mundtest.png" alt="mundtest">
@@ -130,7 +141,9 @@
 
 
             <div class="col">
-                <h2>bla bla piercing</h2>
+                <div class="txt">
+                    <h2>bla bla piercing</h2>
+                </div>
                 <div class="img">
                     <figure>
                         <img src="billeder/fissetest.png" alt="fissetest">
@@ -142,7 +155,9 @@
             </div>
 
             <div class="col">
-                <h2>bla bla piercing</h2>
+                <div class="txt">
+                    <h2>bla bla piercing</h2>
+                </div>
                 <div class="img">
                     <figure>
                         <img src="billeder/piktest.png" alt="piktest">
@@ -154,7 +169,9 @@
             </div>
 
             <div class="col">
-                <h2>bla bla piercing</h2>
+                <div class="txt">
+                    <h2>bla bla piercing</h2>
+                </div>
                 <div class="img">
                     <figure>
                         <img src="billeder/mundtest.png" alt="mundtest">
