har lavet priser side og stylet tabel

--- a/priser.html
+++ b/priser.html
@@ -26,16 +26,149 @@
 
     </header>
 
-    <div class="priser"> priser</div>
-
-
-
-
-
 
     <section id="priser">
+        <h1>Priser</h1>
 
+        <div class="txt">
+            <p>Bemærk priser!<br>Nogle priser er med smykker inkl.*</p>
+            <p>Ønsker du at få afkortet et smykke er du velkommen til at kigge forbi i butikken.<br>Tidsbestillinger for smykkeskift er IKKE muligt.<br>Pris pr. afkortelse er kr. 40,- for Gorlubb's kunder, senest 3 mdr efter piercingens udførelse.<br>Over 3 mdr. Efter piercingens udførelse og udefra kommende kunder får smykkerskift og afkortelser for kr. 80,-<br>Ønsker du at reservere tid for et smykkeskift, kalder vi det for en konsultation. En konsultation koster 200,- kr.</p>
+        </div>
 
+        <div class="tabel">
+            <table>
+                <tr>
+                    <th class="kategori">
+                        Øre-piercinger
+                    </th>
+                    <th class="kategori">Pris</th>
+                </tr>
+                <tr>
+                    <td>Conch</td>
+                    <td>400 kr.</td>
+                </tr>
+                <tr>
+                    <td>Ørekant / Helix</td>
+                    <td>400 kr.</td>
+                </tr>
+                <tr>
+                    <td>Antihelix</td>
+                    <td>400 kr.</td>
+                </tr>
+                <tr>
+                    <td>Rook</td>
+                    <td>400 kr.</td>
+                </tr>
+                <tr>
+                    <td>Daith</td>
+                    <td>400 kr.</td>
+                </tr>
+                <tr>
+                    <td>Tragus</td>
+                    <td>400 kr.</td>
+                </tr>
+                <tr>
+                    <td>Ørflip</td>
+                    <td>275 kr.</td>
+                </tr>
+                <tr>
+                    <td>Ørflip med instant stretch</td>
+                    <td>400 kr.</td>
+                </tr>
+                <tr>
+                    <td>Industrial</td>
+                    <td>500 kr.</td>
+                </tr>
+                <th class="kategori">
+                    Ansigtspiercinger
+                </th>
+                <th class="kategori">Pris</th>
+                <tr>
+                    <td>Smiley Piercing</td>
+                    <td>400 kr.</td>
+                </tr>
+                <tr>
+                    <td>Næsefløj</td>
+                    <td>400 kr.</td>
+                </tr>
+                <tr>
+                    <td>Øjenbryn</td>
+                    <td>400 kr.</td>
+                </tr>
+                <tr>
+                    <td>Septum</td>
+                    <td>450 kr.</td>
+                </tr>
+                <tr>
+                    <td>Kind</td>
+                    <td>500 kr.</td>
+                </tr>
+                <tr>
+                    <td>Madonna / Monroe</td>
+                    <td>450 kr.</td>
+                </tr>
+                <tr>
+                    <td>Labret / Læbe</td>
+                    <td>450 kr.</td>
+                </tr>
+                <tr>
+                    <td>Iwacha / Medusa</td>
+                    <td>450 kr.</td>
+                </tr>
+                <tr>
+                    <td>Earl</td>
+                    <td>450 kr.</td>
+                </tr>
+                <tr>
+                    <td>Tunge</td>
+                    <td>450 kr.</td>
+                </tr>
+                <tr>
+                    <td>Tunge streng / Web</td>
+                    <td>450 kr.</td>
+                </tr>
+                <th class="kategori">
+                    Kønsdel-piercinger
+                </th>
+                <th class="kategori">Pris</th>
+                <tr>
+                    <td>Forhudspiercing, Guiche, Lorum, Cavic, Pubic, Frenum</td>
+                    <td>500 kr.</td>
+                </tr>
+                <tr>
+                    <td>Ampallang, Apadravya, Triangel</td>
+                    <td>550 kr.</td>
+                </tr>
+                <tr>
+                    <td>Christina</td>
+                    <td>500 kr.</td>
+                </tr>
+                <tr>
+                    <td>Prince Albert, Queen Victoria</td>
+                    <td>550 kr.</td>
+                </tr>
+                <th class="kategori">
+                    Øvrige Piercinger
+                </th>
+                <th class="kategori">Pris</th>
+                <tr>
+                    <td>Surface piercing</td>
+                    <td>500. kr.</td>
+                </tr>
+                <tr>
+                    <td>*Dermal Anchors / Micro Dermals (og 350 kr. for efterfølgende dermals)</td>
+                    <td>500 kr.</td>
+                </tr>
+                <tr>
+                    <td>*Skindivers (300 kr. for efterfølgende skindivers)</td>
+                    <td>400 kr.</td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="txt">
+            <p>Ved to ens piercinger på samme tid og samme person, er den ene til halv pris.<br><b>Gælder ikke ved Dermal Anchors / Micro Dermals, Skindivers og Øreflipspiercinger.</b></p>
+        </div>
 
 
     </section>
