--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
 
         <nav>
 
-            <a href="index.html">Forside</a>
+            <a href="index.html" id="menuforside">Forside</a>
             <a href="piercinger.html">Piercinger</a>
-            <a href="praktiskinfo.html">Praktisk info</a>
+            <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
             <a href="omos.html">Om os</a>
             <a href="priser.html">Priser</a>
             <a href="kontaktbooking.html">Kontakt/booking</a>
-
-
 
 
         </nav>
@@ -34,9 +32,7 @@
     </header>
 
 
-    <section id="index">
-
-
+    <section id="splash">
 
     </section>
 
