--- a/priser.html
+++ b/priser.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priser</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="robots" content="noindex">
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/uro8jek.css">
